# onepool

./: .gitignore  README.md  TESTING.md  TRADEMARK.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
examples/: qwen-0.5b-lora.yaml  smoke-test.yaml
examples/data/: sample-corpus.txt
src/onepool/: __init__.py  pool.py  session.py
src/onepool/cli/: __init__.py  main.py
src/onepool/dash/: __init__.py  app.py  index.html
src/onepool/discovery/: __init__.py  mdns.py
src/onepool/hw/: __init__.py  doctor.py  probe.py
src/onepool/jobs/: __init__.py  spec.py
src/onepool/net/: __init__.py  client.py  protocol.py  server.py  tlsutil.py
src/onepool/train/: __init__.py  distributed.py  local.py  outer.py  tensors.py
tests/: test_cluster.py  test_dash.py  test_diloco.py  test_hw.py  test_jobs.py  test_session.py
