[project]
name = "onepool"
version = "0.0.1"
description = "Turn the laptops in the room into one pool of ML compute. Ad-hoc, zero-config LAN clusters for training and inference on whatever hardware you have."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Priyanshu Doshi" }]
keywords = [
    "distributed-training",
    "machine-learning",
    "cluster",
    "lan",
    "diloco",
    "lora",
    "edge-computing",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "psutil>=5.9",
]

[project.urls]
Homepage = "https://github.com/onepool/onepool"
Issues = "https://github.com/onepool/onepool/issues"

[project.scripts]
onepool = "onepool.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onepool"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
