[project]
name = "onepool"
version = "0.4.0"
description = "Turn the laptops in the room into one pool of ML compute. Ad-hoc, zero-config LAN clusters for training and inference on whatever hardware you have."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Priyanshu Doshi" }]
keywords = [
    "distributed-training",
    "machine-learning",
    "cluster",
    "lan",
    "diloco",
    "lora",
    "edge-computing",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "psutil>=5.9",
    "zeroconf>=0.150.0",
    "msgpack>=1.2.1",
    "cryptography>=49.0.0",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "pyyaml>=6.0.3",
    "numpy>=1.24",
]

[project.optional-dependencies]
# torch is intentionally NOT here: the right build depends on your GPU/OS.
# Run `onepool doctor` for the exact install command, then: pip install "onepool[train]"
train = [
    "transformers>=4.48",
    "peft>=0.14",
    "datasets>=3.0",
]

[project.urls]
Homepage = "https://github.com/one-pool/onepool"
Issues = "https://github.com/one-pool/onepool/issues"

[project.scripts]
onepool = "onepool.cli.main:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onepool"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
